Pack all into and Blender report Missing Files #40792

Closed
opened 2014-06-24 18:22:34 +02:00 by José Petri de Lima · 9 comments

I have a project with 17 imagens as textures, I pack all into blend and when go to file report missing files there are a report for 17 textures missed, but there are not to be missed, there are to be inside blend file! And in fact there are inside of the file, but Blender still with some thing saying that the images are missing, why?

See the video

  • Plus another bug with import and append =P

http://goo.gl/A1pq1s

I have a project with 17 imagens as textures, I pack all into blend and when go to file report missing files there are a report for 17 textures missed, but there are not to be missed, there are to be inside blend file! And in fact there are inside of the file, but Blender still with some thing saying that the images are missing, why? See the video + Plus another bug with import and append =P http://goo.gl/A1pq1s

Changed status to: 'Open'

Changed status to: 'Open'
José Petri de Lima self-assigned this 2014-06-24 18:22:34 +02:00
José Petri de Lima was unassigned by Bastien Montagne 2014-06-24 19:56:18 +02:00

Added subscribers: @JosePetrideLima, @mont29

Added subscribers: @JosePetrideLima, @mont29

Videos are of no help for us, precise concise description of the issue (one and only one per report) are enough. Together with a .blend file to reproduce it, which is missing here…

Videos are of no help for us, precise concise description of the issue (one and only one per report) are enough. Together with a .blend file to reproduce it, which is missing here…

I thought the best way to show a problem is with a video that I say what happen.

But the problem is that, take a blende project, packed the textures files to the blend file, move to another folder, go to External Data/Reporting Missing File and the blender will report the files are missing, but if I packed the textures, the textures is inside the blend file, not out! So this is the problem.

This happen with 2 of my projects now! And bring to me some problems.

I thought the best way to show a problem is with a video that I say what happen. But the problem is that, take a blende project, packed the textures files to the blend file, move to another folder, go to External Data/Reporting Missing File and the blender will report the files are missing, but if I packed the textures, the textures is inside the blend file, not out! So this is the problem. This happen with 2 of my projects now! And bring to me some problems.

I made a model with the problem

Open, go to File/ External Data/Report Missing File and you see a the message.

Monkey.zip

I made a model with the problem Open, go to File/ External Data/Report Missing File and you see a the message. [Monkey.zip](https://archive.blender.org/developer/F95533/Monkey.zip)

Thanks for the file, can confirm that.

Thanks for the file, can confirm that.
Bastien Montagne self-assigned this 2014-06-25 19:24:52 +02:00

This issue was referenced by 50ca320f57

This issue was referenced by 50ca320f57d0d230339b2811a5a18c850c8507a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 50ca320f57.

Closed by commit 50ca320f57.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40792
No description provided.